# Realtime-Fintech

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
.sqlx/: query-4cd963e9e3754457792f06a8329039152d078938894df19ac429e75e8db11f6a.json
crates/common/: Cargo.toml  build.rs
crates/common/proto/: trade.proto
crates/common/src/: lib.rs  observability.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/ingestor/: Cargo.toml
crates/ingestor/src/: main.rs
crates/processor/: Cargo.toml
crates/processor/src/: main.rs
migrations/: 20260112183748_create_trades_table.up.sql
