[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async and Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Read Data
redis = { version = "0.24", features = ["tokio-comp","connection-manager"] }

# Convert to JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cors
tower-http = { version = "0.5", features = ["cors"] }